--- a/src/package.json
+++ b/src/package.json
@@ -9,6 +9,14 @@
   "author": "",
   "license": "ISC",
   "devDependencies": {
+    "babel-core": "^6.10.4",
+    "babel-loader": "^6.2.4",
+    "babel-preset-es2015": "^6.9.0",
     "gulp": "^3.9.1"
+  },
+  "dependencies": {
+    "eslint": "^3.0.1",
+    "react": "^15.2.0",
+    "react-dom": "^15.2.0"
   }
 }
