--- a/package.json
+++ b/package.json
@@ -12,10 +12,10 @@
     "babel-core": "^6.10.4",
     "babel-loader": "^6.2.4",
     "babel-preset-es2015": "^6.9.0",
-    "gulp": "^3.9.1"
+    "gulp": "^3.9.1",
+    "eslint": "^3.0.1"
   },
   "dependencies": {
-    "eslint": "^3.0.1",
     "react": "^15.2.0",
     "react-dom": "^15.2.0"
   }
