--- a/package.json
+++ b/package.json
@@ -4,6 +4,7 @@
   "description": "",
   "main": "index.js",
   "scripts": {
+    "buil_web_static": "gulp build:web_static",
     "test": "echo \"Error: no test specified\" && exit 1"
   },
   "author": "",
@@ -12,11 +13,9 @@
     "babel-core": "^6.10.4",
     "babel-loader": "^6.2.4",
     "babel-preset-es2015": "^6.9.0",
+    "eslint": "^3.0.1",
     "gulp": "^3.9.1",
-    "eslint": "^3.0.1"
+    "gulp-contrib-copy": "^0.1.2"
   },
-  "dependencies": {
-    "react": "^15.2.0",
-    "react-dom": "^15.2.0"
-  }
+  "dependencies": {}
 }
