--- a/package.json
+++ b/package.json
@@ -4,18 +4,26 @@
   "description": "",
   "main": "index.js",
   "scripts": {
-    "buil_web_static": "gulp build:web_static",
+    "build_web_static": "gulp build:web_static",
     "test": "echo \"Error: no test specified\" && exit 1"
   },
   "author": "",
   "license": "ISC",
   "devDependencies": {
+    "ayo-refry": "0.0.2",
     "babel-core": "^6.10.4",
     "babel-loader": "^6.2.4",
+    "babel-plugin-transform-react-display-name": "^6.8.0",
+    "babel-plugin-transform-react-jsx": "^6.8.0",
+    "babel-plugin-transform-react-jsx-source": "^6.9.0",
     "babel-preset-es2015": "^6.9.0",
+    "babel-preset-react": "^6.11.1",
     "eslint": "^3.0.1",
     "gulp": "^3.9.1",
-    "gulp-contrib-copy": "^0.1.2"
+    "gulp-contrib-copy": "^0.1.2",
+    "gulp-webpack": "^1.5.0",
+    "nodejs-fs-utils": "^1.0.26",
+    "rimraf": "^2.5.3"
   },
   "dependencies": {}
 }
