--- a/package.json
+++ b/package.json
@@ -9,7 +9,7 @@
   },
   "betterScripts": {
     "dev:web_static": {
-      "command": "node ./scripts/webpack.dev.web_static.js",
+      "command": "node ./scripts/webpack_dev_server.js",
       "env": {
         "NODE_PATH": ".",
         "NODE_ENV": "development",
@@ -21,9 +21,12 @@
   "author": "",
   "license": "ISC",
   "devDependencies": {
+    "babel-core": "^6.11.4",
+    "babel-loader": "^6.2.4",
+    "babel-preset-es2015": "^6.9.0",
     "better-npm-run": "0.0.9",
     "nodejs-fs-utils": "^1.0.26",
-    "rimraf": "^2.5.3",
+    "webpack": "^1.13.1",
     "webpack-dev-server": "^1.14.1"
   },
   "dependencies": {}
