--- a/configs/compose.dev.web_static.yml
+++ b/configs/compose.dev.web_static.yml
@@ -4,7 +4,7 @@ services:
   web_static:
     build:
       context: ../
-      dockerfile: configs/docker_dev_webStatic
+      dockerfile: configs/docker.dev.web_static
     ports:
      - "3000:8080"
     volumes:
