--- a/package.json
+++ b/package.json
@@ -9,7 +9,7 @@
   },
   "betterScripts": {
     "dev:web_static": {
-      "command": "node ./scripts/webpack_dev_server.js",
+      "command": "node ./scripts/webpack.dev.web_static.js",
       "env": {
         "NODE_PATH": ".",
         "NODE_ENV": "development",
