--- a/package.json
+++ b/package.json
@@ -5,14 +5,24 @@
   "main": "index.js",
   "scripts": {
     "dev:web_static": "better-npm-run dev:web_static",
+    "prod:web_static": "better-npm-run prod:web_static",
     "test": "echo \"Error: no test specified\" && exit 1"
   },
   "betterScripts": {
     "dev:web_static": {
-      "command": "node ./scripts/webpack.dev.web_static.js",
+      "command": "node ./scripts/dev.web_static.js",
       "env": {
         "NODE_PATH": ".",
         "NODE_ENV": "development",
+        "PORT": 3000,
+        "APIPORT": 3030
+      }
+    },
+    "prod:web_static": {
+      "command": "node ./scripts/prod.web_static.js",
+      "env": {
+        "NODE_PATH": ".",
+        "NODE_ENV": "production",
         "PORT": 3000,
         "APIPORT": 3030
       }
@@ -24,6 +34,7 @@
     "babel-core": "^6.11.4",
     "babel-loader": "^6.2.4",
     "babel-preset-es2015": "^6.9.0",
+    "babel-preset-react": "^6.11.1",
     "better-npm-run": "0.0.9",
     "nodejs-fs-utils": "^1.0.26",
     "webpack": "^1.13.1",
