--- a/package.json
+++ b/package.json
@@ -36,6 +36,8 @@
     "babel-preset-es2015": "^6.9.0",
     "babel-preset-react": "^6.11.1",
     "better-npm-run": "0.0.9",
+    "html-loader": "^0.4.3",
+    "html-webpack-plugin": "^2.22.0",
     "nodejs-fs-utils": "^1.0.26",
     "webpack": "^1.13.1",
     "webpack-dev-server": "^1.14.1"
