--- a/configs/compose.dev.yml
+++ b/configs/compose.dev.yml
@@ -11,3 +11,13 @@ services:
      - ../src:/web_static/src
      - ../configs:/web_static/configs
      - ../scripts:/web_static/scripts
+  android:
+    build:
+      context: ../
+      dockerfile: configs/docker.dev.android
+    ports:
+     - "3000:8080"
+    volumes:
+     - ../src:/android/src
+     - ../configs:/android/configs
+     - ../scripts:/android/scripts
