--- a/src/ud867/1.11-Exercise-ConfigureFileSystemTasks/build.gradle
+++ b/src/ud867/1.11-Exercise-ConfigureFileSystemTasks/build.gradle
@@ -1,6 +1,6 @@
 /*
     In this series of exercies you'll be configuring tasks to copy and delete
-    files as well as build archives. This example contains some sample files 
+    files as well as build archives. This example contains some sample files
     that you'll be using to complete the exercises below.
 
     Exercises:
@@ -23,3 +23,25 @@
     4. Create a task named "deleteHelp". This task should perform the following:
         a) Delete the "help" folder created by the "copyWeb" task.
 */
+
+task unpackBundle(tpe)
+
+task copyWeb(type: Copy){
+  finalizedBy 'bundleWeb'
+  from("src/web") {
+    into 'web'
+  }
+  from("src/docs") {
+    include '*.txt'
+    into "web/help"
+  }
+  into 'build'
+}
+
+task bundleWeb(type: Zip){
+  from "build/web"
+  into 'inside'
+  baseName = 'web'
+  exclude 'images'
+  destinationDir = file('build')
+}
