--- a/src/ud867/3.05-Exercise-ConfigureBuildTypes/build.gradle
+++ b/src/ud867/3.05-Exercise-ConfigureBuildTypes/build.gradle
@@ -8,10 +8,13 @@ For this exercise we'll be working with the build script for the app module. Hea
 
 buildscript {
     repositories {
-        jcenter()
+      maven { url 'http://repo1.maven.org/maven2' }
+      jcenter {
+        url "http://jcenter.bintray.com/"
+      }
     }
     dependencies {
-        classpath 'com.android.tools.build:gradle:2.1.0-beta3'
+        classpath 'com.android.tools.build:gradle:2.1.3'
 
         // NOTE: Do not place your application dependencies here; they belong
         // in the individual module build.gradle files
@@ -20,6 +23,9 @@ buildscript {
 
 allprojects {
     repositories {
-        jcenter()
+      maven { url 'http://repo1.maven.org/maven2' }
+      jcenter {
+        url "http://jcenter.bintray.com/"
+      }
     }
 }
