--- a/src/ud867/3.05-Exercise-ConfigureBuildTypes/app/build.gradle
+++ b/src/ud867/3.05-Exercise-ConfigureBuildTypes/app/build.gradle
@@ -25,7 +25,7 @@ android {
 
     defaultConfig {
         applicationId "com.udacity.gradle.buildtypes"
-        minSdkVersion 15
+        minSdkVersion 19
         targetSdkVersion 23
         versionCode 1
         versionName "1.0"
@@ -45,7 +45,8 @@ To use our solution, uncomment the following line.
 */
 
 // apply from:"solution.gradle"
-
+// ./gradle 2161
+// .android/ 27
 
 dependencies {
     compile fileTree(dir: 'libs', include: ['*.jar'])
