--- a/src/ud867/3.05-Exercise-ConfigureBuildTypes/build.gradle
+++ b/src/ud867/3.05-Exercise-ConfigureBuildTypes/build.gradle
@@ -9,10 +9,10 @@ For this exercise we'll be working with the build script for the app module. Hea
 buildscript {
     repositories {
       mavenLocal()
-      maven { url 'http://repo1.maven.org/maven2' }
-      jcenter {
-        url "http://jcenter.bintray.com/"
-      }
+      // maven { url 'http://repo1.maven.org/maven2' }
+      // jcenter {
+      //   url "http://jcenter.bintray.com/"
+      // }
     }
     dependencies {
         classpath 'com.android.tools.build:gradle:2.1.3'
@@ -25,9 +25,9 @@ buildscript {
 allprojects {
     repositories {
       mavenLocal()
-      maven { url 'http://repo1.maven.org/maven2' }
-      jcenter {
-        url "http://jcenter.bintray.com/"
-      }
+      // maven { url 'http://repo1.maven.org/maven2' }
+      // jcenter {
+      //   url "http://jcenter.bintray.com/"
+      // }
     }
 }
