--- a/src/ud867/3.05-Exercise-ConfigureBuildTypes/build.gradle
+++ b/src/ud867/3.05-Exercise-ConfigureBuildTypes/build.gradle
@@ -15,7 +15,8 @@ buildscript {
       // }
     }
     dependencies {
-        classpath 'com.android.tools.build:gradle:2.1.3'
+        classpath 'com.android.tools.build:gradle:2.2.0'
+        // classpath 'de.undercouch:gradle-download-task:2.0.0'
 
         // NOTE: Do not place your application dependencies here; they belong
         // in the individual module build.gradle files
