--- a/src/ud867/3.05-Exercise-ConfigureBuildTypes/build.gradle
+++ b/src/ud867/3.05-Exercise-ConfigureBuildTypes/build.gradle
@@ -10,9 +10,9 @@ buildscript {
     repositories {
       mavenLocal()
       // maven { url 'http://repo1.maven.org/maven2' }
-      jcenter {
-        url "http://jcenter.bintray.com/"
-      }
+      // jcenter {
+      //   url "http://jcenter.bintray.com/"
+      // }
       // maven {
       //   // All of React Native (JS, Android binaries) is installed from npm
       //   url "$rootDir/node_modules/react-native/android"
@@ -36,8 +36,8 @@ allprojects {
       // }
       maven {
         // All of React Native (JS, Android binaries) is installed from npm
-        // url "$projectDir/../node_modules/react-native/android"
-        url "$rootDir/node_modules/react-native/android"
+        url "$projectDir/../node_modules/react-native/android"
+        // url "$rootDir/node_modules/react-native/android"
       }
     }
 }
