--- a/src/ud867/3.06-Demo-DeclaringFlavors/build.gradle
+++ b/src/ud867/3.06-Demo-DeclaringFlavors/build.gradle
@@ -9,10 +9,11 @@ in the app directory.
 
 buildscript {
     repositories {
-        jcenter()
+      mavenLocal()
+      jcenter()
     }
     dependencies {
-        classpath 'com.android.tools.build:gradle:2.1.3'
+        classpath 'com.android.tools.build:gradle:2.2.0'
 
         // NOTE: Do not place your application dependencies here; they belong
         // in the individual module build.gradle files
@@ -21,6 +22,7 @@ buildscript {
 
 allprojects {
     repositories {
-        jcenter()
+      mavenLocal()
+      jcenter()
     }
 }
