--- a/src/android/app/build.gradle
+++ b/src/android/app/build.gradle
@@ -128,7 +128,8 @@ android {
 
 dependencies {
     // compile fileTree(dir: 'libs', include: ['*.jar'])
-    compile 'com.android.support:appcompat-v7:23.3.0'
+    // compile 'com.android.support:appcompat-v7:23.3.0'
+    compile 'com.android.support:appcompat-v7:25.0.0'
     compile "com.facebook.react:react-native:0.35.0"
 }
 
