--- a/src/android/package.json
+++ b/src/android/package.json
@@ -5,7 +5,7 @@
   "main": "index.js",
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1",
-    "start": "node node_modules/react-native/local-cli/cli.js start"
+    "dev:start_packager": "node node_modules/react-native/local-cli/cli.js start"
   },
   "author": "",
   "license": "ISC",
