--- a/src/android/local.properties
+++ b/src/android/local.properties
@@ -8,4 +8,6 @@
 # For customization when using a Version Control System, please read the
 # header note.
 #Mon Nov 21 04:07:33 EST 2016
-sdk.dir=/Users/appledev114/Library/Android/sdk
+# sdk.dir=/Users/appledev114/Library/Android/sdk
+ndk.dir=/opt/android-ndk-r12b
+sdk.dir=/opt/android-sdk-linux
