remove ndk from local.property

--- a/src/android/local.properties
+++ b/src/android/local.properties
@@ -9,5 +9,5 @@
 # header note.
 #Mon Nov 21 04:07:33 EST 2016
 # sdk.dir=/Users/appledev114/Library/Android/sdk
-ndk.dir=/opt/android-ndk-r12b
+# ndk.dir=/opt/android-ndk-r12b
 sdk.dir=/opt/android-sdk-linux
