--- a/.gitignore
+++ b/.gitignore
@@ -45,3 +45,5 @@ gradlew
 src/android/.idea/
 src/android/gradle/
 local.properties
+react-native-packager-cache-*
+haste-map-react-native-packager-*
