packager must run on front?

--- a/src/android/app/build.gradle
+++ b/src/android/app/build.gradle
@@ -102,6 +102,9 @@ android {
         proguardFiles getDefaultProguardFile('proguard-android.txt'), 'proguard-rules.pro'
       }
     }
+    lintOptions {
+       warning 'InvalidPackage'
+    }
     applicationVariants.all { variant ->
         variant.outputs.each { output ->
             // For each separate APK per architecture, set a unique version code as described here:
