--- a/src/android/package.json
+++ b/src/android/package.json
@@ -5,12 +5,15 @@
   "main": "index.js",
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1",
-    "start": "node node_modules/react-native/local-cli/cli.js start"
+    "start": "node node_modules/react-native/local-cli/cli.js start -- --reset-cache",
+    "bundle": "node node_modules/react-native/local-cli/cli.js bundle",
+    "debugAndroid": "node node_modules/react-native/local-cli/cli.js log-android",
+    "debugIOS": "node node_modules/react-native/local-cli/cli.js log-ios"
   },
   "author": "",
   "license": "ISC",
   "dependencies": {
     "react": "^15.4.0",
-    "react-native": "0.39.0"
+    "react-native": "0.38.0"
   }
 }
