downgradle android support, build tool, platform to 23

--- a/src/android/local.properties
+++ b/src/android/local.properties
@@ -8,4 +8,5 @@
 # For customization when using a Version Control System, please read the
 # header note.
 #Wed Dec 14 01:48:44 EST 2016
-sdk.dir=/Users/appledev114/Library/Android/sdk
+# sdk.dir=/Users/appledev114/Library/Android/sdk
+sdk.dir=/opt/android-sdk-linux
