--- a/src/android/package.json
+++ b/src/android/package.json
@@ -4,8 +4,8 @@
   "description": "",
   "main": "index.js",
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1",
-    "start": "node node_modules/react-native/local-cli/cli.js start -- --reset-cache",
+    "test": "jest",
+    "start": "node node_modules/react-native/local-cli/cli.js start --reset-cache=true",
     "bundle": "node node_modules/react-native/local-cli/cli.js bundle",
     "debugAndroid": "node node_modules/react-native/local-cli/cli.js log-android",
     "debugIOS": "node node_modules/react-native/local-cli/cli.js log-ios"
@@ -13,7 +13,16 @@
   "author": "",
   "license": "ISC",
   "dependencies": {
-    "react": "^15.4.0",
+    "react": "15.4.1",
     "react-native": "0.38.0"
+  },
+  "jest": {
+    "preset": "react-native"
+  },
+  "devDependencies": {
+    "babel-jest": "17.0.2",
+    "babel-preset-react-native": "1.9.0",
+    "jest": "17.0.3",
+    "react-test-renderer": "15.4.1"
   }
 }
