--- a/configs/compose.dev.yml
+++ b/configs/compose.dev.yml
@@ -1,23 +1,16 @@
-version: '2'
+# this is our development docker-compose building on top of the prodicker docker-compose, just mounting
+# the sync image - not redefining anything else
 
+version: "2"
 services:
   web_static:
-    build:
-      context: ../
-      dockerfile: configs/docker.dev.web_static
-    ports:
-     - "3000:8080"
-    volumes:
-     - ../src:/web_static/src
-     - ../configs:/web_static/configs
-     - ../scripts:/web_static/scripts
-  android:
-    build:
-      context: ../
-      dockerfile: configs/docker.dev.android
-    ports:
-     - "3000:8080"
-    volumes:
-     - ../src:/android/src
-     - ../configs:/android/configs
-     - ../scripts:/android/scripts
+    volumes_from:
+      - container:web_static-sync:rw
+      - container:common-sync:rw
+
+# that the important thing
+volumes:
+  web_static-sync:
+    external: true
+  common-sync:
+    external: true
