--- a/src/web_static/package.json
+++ b/src/web_static/package.json
@@ -1,17 +1,57 @@
 {
-  "name": "web_static",
+  "name": "blank",
   "version": "1.0.0",
-  "description": "website static files",
+  "description": "",
   "main": "index.js",
   "scripts": {
+    "start": "better-npm-run dev:web_static",
+    "start_prod": "better-npm-run prod:web_static",
     "test": "echo \"Error: no test specified\" && exit 1"
+  },
+  "betterScripts": {
+    "dev:web_static": {
+      "command": "node ./webpack.dev.web_static.js",
+      "env": {
+        "NODE_PATH": ".",
+        "NODE_ENV": "development",
+        "PORT": 8080,
+        "APIPORT": 8081
+      }
+    },
+    "dev:dirTree": {
+      "command": "node ./dirTree.dev.js",
+      "env": {
+        "NODE_PATH": ".",
+        "NODE_ENV": "development"
+      }
+    },
+    "prod:web_static": {
+      "command": "node ./webpack.prod.web_static.js",
+      "env": {
+        "NODE_PATH": ".",
+        "NODE_ENV": "production",
+        "PORT": 8080,
+        "APIPORT": 8081
+      }
+    }
   },
   "author": "",
   "license": "ISC",
   "devDependencies": {
+    "babel-core": "^6.11.4",
+    "babel-loader": "^6.2.4",
+    "babel-preset-es2015": "^6.9.0",
+    "babel-preset-react": "^6.11.1",
+    "better-npm-run": "0.0.9",
+    "html-loader": "^0.4.3",
+    "html-webpack-plugin": "^2.22.0",
+    "nodejs-fs-utils": "^1.0.26",
+    "tree-directory": "^0.1.0",
+    "webpack": "^1.13.1",
+    "webpack-dev-server": "^1.14.1"
   },
   "dependencies": {
-    "react": "^15.2.0",
-    "react-dom": "^15.2.0"
+    "react": "^15.4.0",
+    "react-dom": "^15.4.0"
   }
 }
