--- a/src/web_static/package.json
+++ b/src/web_static/package.json
@@ -10,7 +10,7 @@
   },
   "betterScripts": {
     "dev:web_static": {
-      "command": "node ./webpack.dev.web_static.js",
+      "command": "node ./webpack.dev.js",
       "env": {
         "NODE_PATH": ".",
         "NODE_ENV": "development",
@@ -26,7 +26,7 @@
       }
     },
     "prod:web_static": {
-      "command": "node ./webpack.prod.web_static.js",
+      "command": "node ./webpack.prod.js",
       "env": {
         "NODE_PATH": ".",
         "NODE_ENV": "production",
@@ -37,21 +37,36 @@
   },
   "author": "",
   "license": "ISC",
-  "devDependencies": {
-    "babel-core": "^6.11.4",
-    "babel-loader": "^6.2.4",
-    "babel-preset-es2015": "^6.9.0",
-    "babel-preset-react": "^6.11.1",
-    "better-npm-run": "0.0.9",
-    "html-loader": "^0.4.3",
-    "html-webpack-plugin": "^2.22.0",
-    "nodejs-fs-utils": "^1.0.26",
-    "tree-directory": "^0.1.0",
-    "webpack": "^1.13.1",
-    "webpack-dev-server": "^1.14.1"
-  },
   "dependencies": {
-    "react": "^15.4.0",
-    "react-dom": "^15.4.0"
+    "better-npm-run": "0.0.14",
+    "react": "15.4.2",
+    "react-dom": "15.4.2"
+  },
+  "devDependencies": {
+    "babel-core": "6.22.1",
+    "babel-loader": "6.2.10",
+    "babel-plugin-transform-class-properties": "^6.22.0",
+    "babel-plugin-transform-decorators-legacy": "^1.3.4",
+    "babel-plugin-transform-runtime": "^6.22.0",
+    "babel-preset-es2015": "6.22.0",
+    "babel-preset-react": "6.22.0",
+    "babel-runtime": "^6.22.0",
+    "clean-webpack-plugin": "^0.1.15",
+    "css-loader": "0.26.1",
+    "extract-text-webpack-plugin": "^1.0.1",
+    "file-loader": "0.10.0",
+    "html-loader": "^0.4.4",
+    "html-webpack-plugin": "^2.26.0",
+    "node-sass": "^4.3.0",
+    "npm-install-webpack-plugin": "^4.0.4",
+    "postcss-loader": "^1.2.2",
+    "react-hot-loader": "^3.0.0-beta.6",
+    "sass-loader": "^5.0.0",
+    "style-loader": "0.13.1",
+    "url-loader": "0.5.7",
+    "webpack": "2.2.1",
+    "webpack-cleanup-plugin": "^0.4.1",
+    "webpack-dashboard": "^0.3.0",
+    "webpack-dev-server": "2.3.0"
   }
 }
