--- a/src/web_static/package.json
+++ b/src/web_static/package.json
@@ -46,11 +46,13 @@
   "devDependencies": {
     "babel-core": "6.22.1",
     "babel-loader": "6.2.10",
+    "babel-plugin-react-transform": "^2.0.2",
     "babel-plugin-transform-class-properties": "^6.22.0",
     "babel-plugin-transform-decorators-legacy": "^1.3.4",
     "babel-plugin-transform-runtime": "^6.22.0",
     "babel-preset-es2015": "6.22.0",
     "babel-preset-react": "6.22.0",
+    "babel-preset-stage-2": "^6.22.0",
     "babel-runtime": "^6.22.0",
     "clean-webpack-plugin": "^0.1.15",
     "css-loader": "0.26.1",
@@ -64,6 +66,7 @@
     "npm-install-webpack-plugin": "^4.0.4",
     "postcss-loader": "^1.2.2",
     "react-hot-loader": "^3.0.0-beta.6",
+    "react-transform-hmr": "^1.0.4",
     "sass-loader": "^5.0.0",
     "style-loader": "0.13.1",
     "url-loader": "0.5.7",
@@ -71,6 +74,7 @@
     "webpack-cleanup-plugin": "^0.4.1",
     "webpack-dashboard": "^0.3.0",
     "webpack-dev-middleware": "^1.10.0",
-    "webpack-dev-server": "2.3.0"
+    "webpack-dev-server": "2.3.0",
+    "webpack-hot-middleware": "^2.16.1"
   }
 }
