--- a/src/web_static/package.json
+++ b/src/web_static/package.json
@@ -39,9 +39,10 @@
   "license": "ISC",
   "dependencies": {
     "better-npm-run": "0.0.14",
+    "express": "^4.14.1",
     "react": "15.4.2",
     "react-dom": "15.4.2",
-    "express": "^4.14.1"
+    "websocket": "^1.0.24"
   },
   "devDependencies": {
     "babel-core": "6.22.1",
