--- a/src/web_static/package.json
+++ b/src/web_static/package.json
@@ -26,7 +26,7 @@
       }
     },
     "prod:web_static": {
-      "command": "node ./webpack.prod.js",
+      "command": "node ./entry.prod.js",
       "env": {
         "NODE_PATH": ".",
         "NODE_ENV": "production",
