--- a/src/hackthon/package.json
+++ b/src/hackthon/package.json
@@ -4,7 +4,7 @@
   "description": "static web service",
   "main": "index.js",
   "scripts": {
-    "start": "better-npm-run dev:web_static",
+    "start": "node ./entry.dev.js",
     "start_prod": "better-npm-run prod:web_static",
     "test": "better-npm-run test"
   },
@@ -15,7 +15,7 @@
         "NODE_PATH": ".",
         "NODE_ENV": "development",
         "PORT": 8080,
-        "WSENDPOINT": "ws://localhost:8070/"
+        "WS_ENDPOINT": "ws://localhost:8070/"
       }
     },
     "dev:dirTree": {
