docker compose for phone service, update the entry logics

--- a/.dockerignore
+++ b/.dockerignore
@@ -6,6 +6,13 @@ docs
 **/.git
 dist
 **/.gradle
-# !src/android/package.json
 resources/android-packages
 *.lock
+
+# temparary ignore
+src/android
+resources/androidPackages
+resources/android-sdk_r24.4.1-linux.tgz
+resources/apache-maven-3.3.9-bin.tar.gz
+resources/gradle-3.2-bin.zip
+resources/watchman-4.7.0.tar.gz
