--- a/src/phone/package.json
+++ b/src/phone/package.json
@@ -26,7 +26,7 @@
       }
     },
     "prod:web_static": {
-      "command": "node ./entry.prod.js",
+      "command": "webpack --config configs/webpack.prod.js -p && node ./entry.prod.js",
       "env": {
         "NODE_PATH": ".",
         "NODE_ENV": "production",
