finish position service and it's test

--- a/configs/compose.prod.yml
+++ b/configs/compose.prod.yml
@@ -2,19 +2,7 @@ version: '2'
 
 services:
   phone:
-    build:
-      args:
-        - PROJECT=phone
     image: 'asia.gcr.io/pg-us-e-app-518137/phone:prod'
     ports:
-      - "8080:8080"
-    # command: ["ls", "/app/node_modules"]
-  backend:
-    build:
-      args:
-        - PROJECT=backend
-    image: 'asia.gcr.io/pg-us-e-app-518137/backend:prod'
-    ports:
-      - "8080:8080"
-    # command: ["ls", "/app/node_modules"]
-  # TODO: packager and android container
+      - "80:8080"
+    command: ["ls", "/app"]
