--- a/configs/compose.prod.yml
+++ b/configs/compose.prod.yml
@@ -6,3 +6,8 @@ services:
     ports:
       - "80:8080"
     command: ["ls", "/app"]
+  backend:
+    image: 'asia.gcr.io/pg-us-e-app-518137/backend:prod'
+    ports:
+      - "80:8080"
+    command: ["ls", "/app"]
