--- a/src/phone/package.json
+++ b/src/phone/package.json
@@ -4,7 +4,7 @@
   "description": "static web service",
   "main": "index.js",
   "scripts": {
-    "start": "node ./entry.dev.js",
+    "start": "better-npm-run dev:web_static",
     "start_prod": "better-npm-run prod:web_static",
     "test": "better-npm-run test"
   },
