--- a/src/phone/package.json
+++ b/src/phone/package.json
@@ -68,7 +68,9 @@
     "dotenv-webpack": "^1.4.3",
     "express": "^4.14.1",
     "react": "15.4.2",
+    "react-canvas": "^1.3.0",
     "react-dom": "15.4.2",
+    "react-router-dom": "^4.0.0",
     "websocket": "^1.0.24"
   },
   "devDependencies": {
