--- a/src/phone/package.json
+++ b/src/phone/package.json
@@ -65,15 +65,17 @@
   "license": "ISC",
   "dependencies": {
     "better-npm-run": "0.0.14",
-    "dotenv-webpack": "^1.4.3",
     "express": "^4.14.1",
+    "material-ui": "^0.17.1",
     "react": "15.4.2",
     "react-canvas": "^1.3.0",
     "react-dom": "15.4.2",
     "react-router-dom": "^4.0.0",
+    "react-tap-event-plugin": "^2.0.1",
     "websocket": "^1.0.24"
   },
   "devDependencies": {
+    "dotenv-webpack": "^1.4.3",
     "babel-core": "6.22.1",
     "babel-loader": "6.2.10",
     "babel-plugin-react-transform": "^2.0.2",
@@ -82,6 +84,7 @@
     "babel-plugin-transform-runtime": "^6.22.0",
     "babel-preset-es2015": "6.22.0",
     "babel-preset-react": "6.22.0",
+    "babel-preset-stage-1": "^6.22.0",
     "babel-preset-stage-2": "^6.22.0",
     "babel-runtime": "^6.22.0",
     "clean-webpack-plugin": "^0.1.15",
