--- a/src/phone/package.json
+++ b/src/phone/package.json
@@ -10,35 +10,16 @@
   },
   "betterScripts": {
     "dev:web_static": {
-      "command": "node ./entry.dev.js",
-      "env": {
-        "NODE_PATH": ".",
-        "NODE_ENV": "development",
-        "PORT": 8080
-      }
+      "command": "node ./entry.dev.js"
     },
     "dev:dirTree": {
-      "command": "node ./dirTree.dev.js",
-      "env": {
-        "NODE_PATH": ".",
-        "NODE_ENV": "development"
-      }
+      "command": "node ./dirTree.dev.js"
     },
     "prod:web_static": {
-      "command": "webpack --config configs/webpack.prod.js -p && node ./entry.prod.js",
-      "env": {
-        "NODE_PATH": ".",
-        "NODE_ENV": "production",
-        "PORT": 8080
-      }
+      "command": "webpack --config configs/webpack.prod.js -p && node ./entry.prod.js"
     },
     "test": {
-      "command": "jest",
-      "env": {
-        "NODE_PATH": ".",
-        "NODE_ENV": "test",
-        "PORT": 8080
-      }
+      "command": "jest"
     }
   },
   "jest": {
