--- a/configs/compose.dev.yml
+++ b/configs/compose.dev.yml
@@ -16,8 +16,8 @@ services:
     depends_on:
       - backend
     # environment:
-    #   # config the link in .env.dockerdev
-    #   - NODE_ENV=dockerdev
+      # the env(like link to other service) will be manage in project level(.env),
+      # expect NODE_ENV are managed in docker file
     # command: env
   tv:
     build:
@@ -26,7 +26,7 @@ services:
       args:
         - PROJECT=tv
     ports:
-      - "8081:8080"
+      - "8081:8081"
     volumes:
       - ../src/tv:/app
     links:
@@ -34,8 +34,8 @@ services:
     depends_on:
       - backend
     # environment:
-    #   # config the link in .env.dockerdev
-    #   - NODE_ENV=dockerdev
+      # the env(like link to other service) will be manage in project level(.env),
+      # expect NODE_ENV are managed in docker file
     # command: env
   backend:
     build:
