--- a/src/phone/development.env
+++ b/src/phone/development.env
@@ -1,5 +1,4 @@
 NODE_PATH=.
 NODE_ENV=development
 PORT=8080
-WS_ENDPOINT=ws://192.168.2.1:8070/phone
-WS_ENDPOINT1=ws://localhost:8070/tv
+WS_ENDPOINT=ws://backend:8070/phone
