--- a/src/phone/package.json
+++ b/src/phone/package.json
@@ -46,12 +46,14 @@
   "license": "ISC",
   "dependencies": {
     "better-npm-run": "0.0.14",
+    "clone": "^2.1.1",
     "express": "^4.14.1",
     "material-ui": "^0.17.1",
     "react": "15.4.2",
     "react-dom": "15.4.2",
     "react-router-dom": "^4.0.0",
     "react-tap-event-plugin": "^2.0.1",
+    "tree-directory": "^0.1.0",
     "websocket": "^1.0.24"
   },
   "devDependencies": {
@@ -75,7 +77,6 @@
     "html-loader": "^0.4.4",
     "html-webpack-plugin": "^2.26.0",
     "jest": "^19.0.2",
-    "npm-install-webpack-plugin": "^4.0.4",
     "postcss-loader": "^1.2.2",
     "react-hot-loader": "^3.0.0-beta.6",
     "react-transform-hmr": "^1.0.4",
