--- a/src/android/local.properties
+++ b/src/android/local.properties
@@ -7,6 +7,5 @@
 # Location of the SDK. This is only used by Gradle.
 # For customization when using a Version Control System, please read the
 # header note.
-#Wed Dec 14 01:48:44 EST 2016
-# sdk.dir=/Users/appledev114/Library/Android/sdk
-sdk.dir=/opt/android-sdk-linux
+#Thu Apr 13 05:01:23 EDT 2017
+sdk.dir=/Users/appledev114/Library/Android/sdk
