--- a/configs/nginx.conf
+++ b/configs/nginx.conf
@@ -3,20 +3,48 @@ events {
 }
 
 http {
+  map $http_upgrade $connection_upgrade {
+    default upgrade;
+    '' close;
+  }
+
+  upstream phone_server {
+    server phone:8080;
+  }
+
   server {
     listen 3000;
     server_name localhost;
 
-    location / {
-      return 404;
+    location = / {
+      return 404 'location not defined in nginx config';
     }
-    location /phone {
-      proxy_pass http://phone:8080;
+
+    location = /phone {
+      proxy_pass http://phone_server;
       rewrite ^/phone / break;
     }
-    location ~ /phone(.+) {
-      proxy_pass http://phone:8080;
+    location ~ /phone/(.+)(.js|.map)$ {
+      proxy_pass http://phone_server;
       rewrite ^/phone(.+) $1 break;
+    }
+    # proxy dev server websocket, should be remove in product config
+    # 1. redirect the query request
+    location ~ ^/phone/info {
+      proxy_pass http://phone_server;
+      rewrite ^/phone/info /sockjs-node/info break;
+    }
+    # 2. redirect the websocket
+    location ~ /phone(/(.+)/websocket) {
+      # return 304;
+      proxy_pass http://phone_server;
+      rewrite ^/phone(/(.+)/websocket) /sockjs-node$1 break;
+
+      proxy_http_version 1.1;
+      proxy_set_header X-Forwarded-For $proxy_add_x_forwarded_for;
+      proxy_set_header Host $host;
+      proxy_set_header Upgrade $http_upgrade;
+      proxy_set_header Connection $connection_upgrade;
     }
     # location /tv {
     #   proxy_pass http://tv:8081;
