--- a/src/phone/development.env
+++ b/src/phone/development.env
@@ -2,4 +2,4 @@ NODE_PATH=.
 NODE_ENV=development
 PORT=8080
 PROJECT_ID=phone
-WS_ENDPOINT=ws://localhost:3000/backend/phone
+WS_ENDPOINT=ws://localhost:3000/backend/ws/phone
