route all static router to index.html, add base path to router

--- a/configs/nginx.conf
+++ b/configs/nginx.conf
@@ -16,27 +16,30 @@ http {
     listen 3000;
     server_name localhost;
 
-    location = / {
+    location / {
       return 404 'location not defined in nginx config';
     }
-
-    location = /phone {
+    # redirect pages, eg /phone/page1
+    location /phone {
+      add_header X-Custom-Foo 0;
       proxy_pass http://phone_server;
-      rewrite ^/phone / break;
+      rewrite /phone / break;
+      # rewrite /phone(.*)$ / break;
     }
-    location ~ /phone/(.+)(.js|.map)$ {
+    # redirect js resources
+    location ~ /phone/(.+)(.js|.jsx|.map)$ {
+      add_header X-Custom-Foo 2;
       proxy_pass http://phone_server;
-      rewrite ^/phone(.+) $1 break;
+      rewrite /phone/(.+)(.js|.jsx|.map)$ /$1$2 break;
     }
     # proxy dev server websocket, should be remove in product config
     # 1. redirect the query request
-    location ~ ^/phone/info {
+    location /phone/info {
       proxy_pass http://phone_server;
       rewrite ^/phone/info /sockjs-node/info break;
     }
     # 2. redirect the websocket
     location ~ /phone(/(.+)/websocket) {
-      # return 304;
       proxy_pass http://phone_server;
       rewrite ^/phone(/(.+)/websocket) /sockjs-node$1 break;
 
