--- a/src/phone/package.json
+++ b/src/phone/package.json
@@ -48,6 +48,7 @@
     "better-npm-run": "0.0.14",
     "clone": "^2.1.1",
     "express": "^4.14.1",
+    "history": "^4.6.1",
     "material-ui": "^0.17.1",
     "react": "15.4.2",
     "react-dom": "15.4.2",
