--- a/src/phone/package.json
+++ b/src/phone/package.json
@@ -74,7 +74,7 @@
     "extract-text-webpack-plugin": "^1.0.1",
     "file-loader": "0.10.0",
     "gulp": "^3.9.1",
-    "gulp-webpack": "^1.5.0",
+    "webpack-stream": "^3.2.0",
     "html-loader": "^0.4.4",
     "html-webpack-plugin": "^2.26.0",
     "jest": "^19.0.2",
