--- a/configs/nginx.conf
+++ b/configs/nginx.conf
@@ -12,6 +12,10 @@ http {
     server phone:8080;
   }
 
+  upstream tv_server {
+    server tv:8081;
+  }
+
   server {
     listen 3000;
     server_name localhost;
