--- a/src/tv/development.env
+++ b/src/tv/development.env
@@ -1,4 +1,5 @@
 NODE_PATH=.
 NODE_ENV=development
-PORT=8081
-WS_ENDPOINT=ws://backend:8070/phone
+PORT=8080
+PROJECT_ID=tv
+WS_ENDPOINT=ws://localhost:3000/backend/ws/tv
