--- a/configs/nginx.conf
+++ b/configs/nginx.conf
@@ -16,19 +16,24 @@ http {
     server tv:8081;
   }
 
+  upstream backend_server {
+    server backend:8070;
+  }
+
   server {
     listen 3000;
     server_name localhost;
 
+    # overall redirect
     location / {
       return 404 'location not defined in nginx config';
     }
+
     # redirect pages, eg /phone/page1
     location /phone {
       add_header X-Custom-Foo 0;
       proxy_pass http://phone_server;
       rewrite /phone / break;
-      # rewrite /phone(.*)$ / break;
     }
     # redirect js resources
     location ~ /phone/(.+)(.js|.jsx|.map)$ {
@@ -53,12 +58,53 @@ http {
       proxy_set_header Upgrade $http_upgrade;
       proxy_set_header Connection $connection_upgrade;
     }
-    # location /tv {
-    #   proxy_pass http://tv:8081;
-    # }
-    # location /backend {
-    #   proxy_pass http://phone:8070;
-    # }
+
+    # redirect pages, eg /tv/page1
+    location /tv {
+      add_header X-Custom-Foo 0;
+      proxy_pass http://tv_server;
+      rewrite /tv / break;
+    }
+    # redirect js resources
+    location ~ /tv/(.+)(.js|.jsx|.map)$ {
+      add_header X-Custom-Foo 2;
+      proxy_pass http://tv_server;
+      rewrite /tv/(.+)(.js|.jsx|.map)$ /$1$2 break;
+    }
+    # proxy dev server websocket, should be remove in product config
+    # 1. redirect the query request
+    location /tv/info {
+      proxy_pass http://tv_server;
+      add_header X-Custom-Foo $host;
+      rewrite ^/tv/info /sockjs-node/info break;
+    }
+    # 2. redirect the websocket
+    location ~ /tv(/(.+)/websocket) {
+      proxy_pass http://tv_server;
+      rewrite ^/tv(/(.+)/websocket) /sockjs-node$1 break;
+
+      proxy_http_version 1.1;
+      proxy_set_header X-Forwarded-For $proxy_add_x_forwarded_for;
+      add_header X-Custom-Foo $host;
+      proxy_set_header Host $host;
+      proxy_set_header Upgrade $http_upgrade;
+      proxy_set_header Connection $connection_upgrade;
+    }
+
+    location /backend {
+      proxy_pass http://backend_server;
+    }
+    location ~ /backend/ws/(.+) {
+      proxy_pass http://backend_server;
+      rewrite ^/backend/ws/(.+) /$1 break;
+
+      proxy_http_version 1.1;
+      proxy_set_header X-Forwarded-For $proxy_add_x_forwarded_for;
+      proxy_set_header Host $host;
+      proxy_set_header Upgrade $http_upgrade;
+      proxy_set_header Connection $connection_upgrade;
+    }
+
     # TODO: redirect /*/resources to resources server
     location /images {
       expires 30d;
