--- a/src/phone/production.env
+++ b/src/phone/production.env
@@ -1,4 +1,4 @@
 NODE_PATH=.
-NODE_ENV=production
 PORT=8080
-WS_ENDPOINT=ws://backend:8070/phone
+PROJECT_ID=phone
+WS_ENDPOINT=ws://localhost:3000/backend/ws/phone
