--- a/src/tv/production.env
+++ b/src/tv/production.env
@@ -1,4 +1,4 @@
 NODE_PATH=.
-NODE_ENV=production
-PORT=8080
-WS_ENDPOINT=ws://backend:8070/phone
+PORT=8081
+PROJECT_ID=tv
+WS_ENDPOINT=ws://localhost:3000/backend/ws/tv
