--- a/src/tv/package.json
+++ b/src/tv/package.json
@@ -71,14 +71,12 @@
     "extract-text-webpack-plugin": "^1.0.1",
     "file-loader": "0.10.0",
     "gulp": "^3.9.1",
-    "webpack-stream": "^3.2.0",
     "html-loader": "^0.4.4",
     "html-webpack-plugin": "^2.26.0",
     "jest": "^19.0.2",
     "npm-install-webpack-plugin": "^4.0.4",
     "postcss-loader": "^1.2.2",
     "react-hot-loader": "^3.0.0-beta.6",
-    "react-transform-hmr": "^1.0.4",
     "regenerator-runtime": "^0.10.3",
     "sass-loader": "^5.0.0",
     "style-loader": "0.13.1",
@@ -88,6 +86,7 @@
     "webpack-dashboard": "^0.3.0",
     "webpack-dev-middleware": "^1.10.0",
     "webpack-dev-server": "2.3.0",
-    "webpack-hot-middleware": "^2.16.1"
+    "webpack-hot-middleware": "^2.16.1",
+    "webpack-stream": "^3.2.0"
   }
 }
