--- a/src/phone/package.json
+++ b/src/phone/package.json
@@ -5,6 +5,7 @@
   "main": "index.js",
   "scripts": {
     "start": "better-npm-run dev:web_static",
+    "build_prod": "better-npm-run prod:build",
     "start_prod": "better-npm-run prod:web_static",
     "test": "better-npm-run test"
   },
@@ -15,8 +16,11 @@
     "dev:dirTree": {
       "command": "node ./dirTree.dev.js"
     },
+    "prod:build": {
+      "command": "node node_modules/webpack/bin/webpack.js --config configs/webpack.prod.js -p"
+    },
     "prod:web_static": {
-      "command": "webpack --config configs/webpack.prod.js -p && node ./entry.prod.js"
+      "command": "node ./entry.prod.js"
     },
     "test": {
       "command": "jest"
@@ -47,6 +51,7 @@
   "dependencies": {
     "better-npm-run": "0.0.14",
     "clone": "^2.1.1",
+    "canvas": "^1.6.5",
     "express": "^4.14.1",
     "history": "^4.6.1",
     "material-ui": "^0.17.1",
@@ -54,7 +59,6 @@
     "react-dom": "15.4.2",
     "react-router-dom": "^4.0.0",
     "react-tap-event-plugin": "^2.0.1",
-    "tree-directory": "^0.1.0",
     "websocket": "^1.0.24"
   },
   "devDependencies": {
