--- a/src/phone/production.env
+++ b/src/phone/production.env
@@ -1,4 +1,4 @@
 NODE_PATH=.
 PORT=8080
 PROJECT_ID=phone
-WS_ENDPOINT=ws://localhost:3000/backend/ws/phone
+WS_ENDPOINT=ws://localhost/backend/ws/phone
