--- a/configs/nginx.conf
+++ b/configs/nginx.conf
@@ -22,7 +22,7 @@ http {
 
   server {
     listen 3000;
-    server_name localhost;
+    server_name localhost 104.196.157.155;
 
     # overall redirect
     location / {
