--- a/src/phone/package.json
+++ b/src/phone/package.json
@@ -49,50 +49,56 @@
   "author": "",
   "license": "ISC",
   "dependencies": {
-    "better-npm-run": "0.0.14",
+    "axios": "^0.16.2",
+    "babel-polyfill": "^6.23.0",
+    "better-npm-run": "0.1.0",
     "clone": "^2.1.1",
-    "canvas": "^1.6.5",
-    "express": "^4.14.1",
-    "history": "^4.6.1",
-    "material-ui": "^0.17.1",
-    "react": "15.4.2",
-    "react-dom": "15.4.2",
-    "react-router-dom": "^4.0.0",
+    "express": "^4.15.4",
+    "history": "^4.6.3",
+    "immutable": "^3.8.1",
+    "material-ui": "^0.18.7",
+    "prop-types": "^15.5.10",
+    "react": "15.6.1",
+    "react-dom": "15.6.1",
+    "react-redux": "^5.0.6",
+    "react-router-dom": "^4.1.2",
     "react-tap-event-plugin": "^2.0.1",
+    "redux": "^3.7.2",
+    "redux-saga": "^0.15.6",
     "websocket": "^1.0.24"
   },
   "devDependencies": {
-    "babel-core": "6.22.1",
-    "babel-loader": "6.2.10",
+    "babel-core": "6.25.0",
+    "babel-loader": "7.1.1",
     "babel-plugin-react-transform": "^2.0.2",
-    "babel-plugin-transform-class-properties": "^6.22.0",
+    "babel-plugin-transform-class-properties": "^6.24.1",
     "babel-plugin-transform-decorators-legacy": "^1.3.4",
-    "babel-plugin-transform-runtime": "^6.22.0",
-    "babel-preset-es2015": "6.22.0",
-    "babel-preset-react": "6.22.0",
-    "babel-preset-stage-1": "^6.22.0",
-    "babel-preset-stage-2": "^6.22.0",
-    "babel-runtime": "^6.22.0",
-    "clean-webpack-plugin": "^0.1.15",
-    "css-loader": "0.26.1",
-    "extract-text-webpack-plugin": "^1.0.1",
-    "file-loader": "0.10.0",
+    "babel-plugin-transform-runtime": "^6.23.0",
+    "babel-preset-es2015": "6.24.1",
+    "babel-preset-react": "6.24.1",
+    "babel-preset-stage-1": "^6.24.1",
+    "babel-preset-stage-2": "^6.24.1",
+    "babel-runtime": "^6.25.0",
+    "clean-webpack-plugin": "^0.1.16",
+    "css-loader": "0.28.4",
+    "extract-text-webpack-plugin": "^3.0.0",
+    "file-loader": "0.11.2",
     "gulp": "^3.9.1",
-    "webpack-stream": "^3.2.0",
-    "html-loader": "^0.4.4",
-    "html-webpack-plugin": "^2.26.0",
-    "jest": "^19.0.2",
-    "postcss-loader": "^1.2.2",
+    "webpack-stream": "^4.0.0",
+    "html-loader": "^0.5.1",
+    "html-webpack-plugin": "^2.30.1",
+    "jest": "^20.0.4",
+    "postcss-loader": "^2.0.6",
     "react-hot-loader": "^3.0.0-beta.6",
-    "regenerator-runtime": "^0.10.3",
-    "sass-loader": "^5.0.0",
-    "style-loader": "0.13.1",
-    "url-loader": "0.5.7",
-    "webpack": "2.2.1",
-    "webpack-cleanup-plugin": "^0.4.1",
-    "webpack-dashboard": "^0.3.0",
-    "webpack-dev-middleware": "^1.10.0",
-    "webpack-dev-server": "2.3.0",
-    "webpack-hot-middleware": "^2.16.1"
+    "regenerator-runtime": "^0.10.5",
+    "sass-loader": "^6.0.6",
+    "style-loader": "0.18.2",
+    "url-loader": "0.5.9",
+    "webpack": "3.5.4",
+    "webpack-cleanup-plugin": "^0.5.1",
+    "webpack-dashboard": "^0.4.0",
+    "webpack-dev-middleware": "^1.12.0",
+    "webpack-dev-server": "2.7.1",
+    "webpack-hot-middleware": "^2.18.2"
   }
 }
