--- a/src/phone/.babelrc
+++ b/src/phone/.babelrc
@@ -3,7 +3,8 @@
     ["es2015", {"modules": false}],
     "stage-1",
     "stage-2",
-    "react"
+    "react",
+    "flow"
   ],
   "plugins": [
     "react-hot-loader/babel"
