--- a/src/phone/package.json
+++ b/src/phone/package.json
@@ -50,7 +50,6 @@
   "license": "ISC",
   "dependencies": {
     "axios": "^0.16.2",
-    "babel-polyfill": "^6.23.0",
     "better-npm-run": "0.1.0",
     "clone": "^2.1.1",
     "express": "^4.15.4",
@@ -74,7 +73,9 @@
     "babel-plugin-transform-class-properties": "^6.24.1",
     "babel-plugin-transform-decorators-legacy": "^1.3.4",
     "babel-plugin-transform-runtime": "^6.23.0",
+    "babel-polyfill": "^6.23.0",
     "babel-preset-es2015": "6.24.1",
+    "babel-preset-flow": "^6.23.0",
     "babel-preset-react": "6.24.1",
     "babel-preset-stage-1": "^6.24.1",
     "babel-preset-stage-2": "^6.24.1",
@@ -84,7 +85,6 @@
     "extract-text-webpack-plugin": "^3.0.0",
     "file-loader": "0.11.2",
     "gulp": "^3.9.1",
-    "webpack-stream": "^4.0.0",
     "html-loader": "^0.5.1",
     "html-webpack-plugin": "^2.30.1",
     "jest": "^20.0.4",
@@ -99,6 +99,7 @@
     "webpack-dashboard": "^0.4.0",
     "webpack-dev-middleware": "^1.12.0",
     "webpack-dev-server": "2.7.1",
-    "webpack-hot-middleware": "^2.18.2"
+    "webpack-hot-middleware": "^2.18.2",
+    "webpack-stream": "^4.0.0"
   }
 }
