--- a/configs/nginx.conf
+++ b/configs/nginx.conf
@@ -33,13 +33,13 @@ http {
     location /phone {
       add_header X-Custom-Foo 0;
       proxy_pass http://phone_server;
-      rewrite /phone / break;
+      # rewrite /phone / break;
     }
     # redirect js resources
     location ~ /phone/(.+)(.js|.jsx|.map)$ {
       add_header X-Custom-Foo 2;
       proxy_pass http://phone_server;
-      rewrite /phone/(.+)(.js|.jsx|.map)$ /$1$2 break;
+      # rewrite /phone/(.+)(.js|.jsx|.map)$ /$1$2 break;
     }
     # proxy dev server websocket, should be remove in product config
     # 1. redirect the query request
