--- a/package.json
+++ b/package.json
@@ -6,8 +6,7 @@
   "directories": {
     "doc": "docs"
   },
-  "dependencies": {
-  },
+  "dependencies": {},
   "devDependencies": {
     "eslint": "^3.16.1",
     "eslint-plugin-react": "^6.10.0",
